changes to index.js and index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
           <img class="icon" src="soccerplayer.png" alt="Soccer Player"/>
        </section>
        <section class="bottomBanner">
-          <h3>Score:<span class="score">0</span></h3>
+          <h3>Score:<span class="score">0</span>/10</h3>
+          <h3>Question: <span class = "questionNumberDisplay">0</span>/10</h3>
        </section>
     </header>
 
@@ -26,7 +27,7 @@
       </section>
 
       <section id="quizSection">
-        <h1>Question: <span class = "questionNumberDisplay">1</span></h1>
+        
         <h2 id="questionText"></h2>
         <form id="quizForm">
           <fieldset>
