--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           <img class="icon" src="soccerplayer.png" alt="Soccer Player"/>
        </section>
        <section class="bottomBanner">
-          <h3>Score:<span class="score">0</span>/10</h3>
           <h3>Question: <span class = "questionNumberDisplay">0</span>/10</h3>
+          <h3>Score: <span class="score">0</span></h3>
        </section>
     </header>
 
